week4/Project/k8s/gateway/author-fault.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
    - authors
  http:
  - fault:
      abort:
        percentage:
          value: 100
        httpStatus: 500
    route:
    - destination:
        host: authors
        subset: v1
      weight: 50
    - destination:
        host: authors
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  namespace: istio-course
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
  namespace: istio-course
spec:
  hosts:
    - books
  http:
  - route:
    - destination:
        host: books
        subset: v1
      weight: 50
    - destination:
        host: books
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
  namespace: istio-course
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio
  namespace: istio-course
spec:
  hosts:
  - "*"
  gateways:
  - course-frontend-gateway
  http:
  - match:
    - uri:
        prefix: /frontend-catalog/api/v1/
    rewrite:
        uri: /api/v1/
    route:
    - destination:
        host: frontend
        port:
          number: 8080
