week4/Project/k8s/gateway/feature_flag.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
    - authors
  http:
  - match:
      - headers:
          developer:
            exact: katyu
    route:
    - destination:
        host: authors
        subset: v2
  - route:
    - destination:
        host: authors
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  namespace: istio-course
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
  namespace: istio-course
spec:
  hosts:
    - books
  http:
  - match:
      - headers:
          developer:
            exact: katyu
    route:
    - destination:
        host: books
        subset: v2
  - route:
    - destination:
        host: books
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
  namespace: istio-course
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
