week4/Project/k8s/gateway/frontend_dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
  namespace: istio-course
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: flag
    labels:
      version: flag
